# nba-data-forge

./: .gitignore  README.md  pyproject.toml  requirements.txt
airflow/: docker-compose.yaml
airflow/dags/: daily_updates_dag.py  historical_data_dag.py  test_daily_updates_dag.py
airflow/data/raw/: sample_game_logs_2006.csv  sample_game_logs_2009.csv
alembic/: env.py
alembic/versions/: 4fb07bae5535_initial_migration.py  f99d7fe8d4dd_update_game_logs_table.py
app/: main.py  models.py
app/api/: __init__.py  boxscores.py  game_logs.py  players.py  teams.py
app/api/dependencies/: filters.py  query_utils.py
app/api/v1/: boxscores.py  game_logs.py  players.py  teams.py
app/core/: config.py  database.py
app/schemas/: Player_name_id.py  boxscore.py  game_log.py
app/scripts/: db_setup.py  preprocessing.py
app/services/: boxscore_service.py
data_engineering/extractors/: base.py  game_log_extractor.py  player_extractor.py
data_engineering/loaders/: database.py
data_engineering/transformers/: game_log_transformer.py
data_engineering/utils/: path.py
database/scripts/: db_setup.py  preprocessing.py
notebooks/: data_exploration.ipynb
schema/: game_logs.sql
scripts/: data_collection.py  db_setup.py  preprocessing.py
sql/: schema.sql
src/nba_data_forge/api/: main.py
src/nba_data_forge/dashboard/: api_client.py  client.py  main.py
src/nba_data_forge/scripts/: db_setup.py  init_database.py  init_test_database.py  (+1 more)
tests/: conftest.py  test_create_table.py  test_database.py  test_load_daily_game_logs.py  test_upsert_functionality.py
(+59 files in other folders)
