[project]
name = "nba-data-forge"
version = "0.1.0"
description = "NBA analytics platform focusing on serving NBA statistics and insights"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Kevin Huang"}
]
license = {text = "MIT"}


[tool.setuptools.packages.find]
where = ["src"]
include = ["nba_pipeline*"]
namespaces = false